# peng-agent

./: .gitignore  .gitlab-ci.yml  .impeccable.md  CLAUDE.md  Dockerfile  README.md  design_specs.md  main.py  requirements.txt  setup.py  static-analysis.datadog.yml
.Jules/: bolt.md  palette.md
.github/workflows/: build-and-deploy.yml  cleanup-images.yml  docker-build.yml
.jules/: bolt.md
app/: Dockerfile
app/mobile/: App.tsx  app.config.js  babel.config.js  eas.json  eslint.config.mjs  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
app/mobile/src/components/: InputArea.tsx  MemoryModal.tsx  MessageList.tsx  ModelModal.tsx  RAGModal.tsx  UserProfileModal.tsx
app/mobile/src/contexts/: AuthContext.tsx
app/mobile/src/hooks/: ModelAPI.ts  UserAPI.ts
app/mobile/src/navigation/: TabNavigator.tsx
app/mobile/src/screens/: ChatScreen.tsx  LoginScreen.tsx  MemoryScreen.tsx  ModelScreen.tsx  ProfileScreen.tsx  RAGScreen.tsx
app/mobile/src/services/: chatService.ts  memoryService.ts  modelService.ts  ragService.ts  toolService.ts  uploadService.ts  userService.ts
app/mobile/src/utils/: apiBase.ts  apiCall.ts  apiUtils.ts  authUtils.ts  colors.ts  storage.ts  typography.ts
app/share/: package.json
app/share/src/hooks/: MemoryAPI.ts  ModelAPI.ts  UserAPI.ts
app/share/src/services/: chatService.ts  memoryService.ts  ragService.ts  toolService.ts  uploadService.ts
app/share/src/store/: index.ts
app/share/src/types/: ChatInterface.types.ts  global.d.ts
app/share/src/utils/: apiBase.ts  apiUtils.ts  storage.ts
app/shared/: README.md
app/shared/src/types/: index.ts
app/web/: .dockerignore  .prettierignore  Dockerfile  docker-entrypoint.sh  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app/web/src/: App.tsx  index.css  index.tsx
app/web/src/components/: AuthRoutes.tsx  ChatInterface.css  ChatInterface.tsx  ChatInterface.types.ts  InputArea.tsx  Login.css  Login.tsx  MemorySelection.css  MemorySelection.tsx  MessageItem.tsx  MessageList.tsx  ModelInterface.css  ModelInterface.tsx  PrivateRoute.tsx  RAGInterface.css  RAGInterface.tsx  UserProfilePopup.css  UserProfilePopup.tsx
config/: config.py
front/: api.py
handlers/: file_handlers.py  message_handlers.py  openwebui-tools.py  rag_handler.py
models/: agent_request.py  agent_response.py
server/: .dockerignore  .env_sample  Dockerfile  Dockerfile_slim  main.py  pyproject.toml
server/api/: api.py  setup.py
server/api/routers/: auth_router.py  chat_router.py  memory_router.py  model_router.py  operator_router.py  rag_router.py  tools_router.py  upload_router.py  user_router.py
server/archive/: ollama_model.py  prompt_generator_before_agent.py  web_page_tools.py  websearch.py
server/config/: config.py
server/handlers/: auth_handlers.py  chat_handlers.py  file_handlers.py  memory_handlers.py  model_handlers.py  model_utils.py  operator_handlers.py  rag_handlers.py  tool_handlers.py  user_handlers.py
server/models/: agent_request.py  agent_response.py  chat_config.py  db_models.py  model_config.py  operator_config.py  rag_requests.py  user_models.py
server/services/: agent.py  azure_document.py  claude_langchain.py  current_date_tool.py  gemini_langchain.py  ollama_model.py  openai_api.py  openai_completion.py  openai_langchain.py  openai_response.py  peng_agent.py  prompt_generator.py  qdrant_api.py  rag_builder.py  rag_tools.py  rag_usage.py  redis_service.py  response_formatter.py  search_tools.py  tools_routers.py  web_page_tools.py  websearch.py
server/services/chat_models/: claude_langchain.py  gemini_langchain.py  openai_completion.py  openai_response.py  openrouter_langchain.py  xai_langchain.py
server/services/prompts/: markdown_format.md  tool_truncate.md
server/services/rag/: qdrant_api.py  rag_builder.py  rag_usage.py
server/services/tools/: actsc_tools.py  current_date_tool.py  mcp_tools.py  minio_tools.py  rag_tools.py  search_tools.py  smtp_tools.py  sql_tool.py  ssh_tools.py  tools_routers.py  web_page_tools.py
server/test/: langgraph_draw.py  mcp_test.py  test.py  test2.py  test3.py  test_api_routers.py  test_config.py  test_handlers_auth.py  test_handlers_chat.py  test_handlers_file.py  test_handlers_memory.py  test_handlers_model.py  test_handlers_model_utils.py  test_handlers_operator.py  test_handlers_rag.py  test_handlers_tool.py  test_handlers_user.py  test_memory_optimization.py  test_mysql_connect_extended.py  test_mysql_connect_in_clause.py  test_redis_service.py  test_services_prompt.py  test_services_redis.py  test_services_tools_ssh.py  test_utils_log.py  test_utils_minio.py  test_utils_mysql.py  test_utils_redis.py
server/utils/: log.py  minio_connection.py  mysql_connect.py  redis.py  redis_cache.py
services/: ollama_model.py  openai_api.py  prompt_generator.py  rag_builder.py
test/: docker-compose.yml  docker-compose_with_app.yml  docker-compose_with_ollama.yml
utils/: log.py  minio_connection.py  mysql_connect.py  rabbitmq_consumer.py  rabbitmq_publisher.py
web/: Dockerfile  docker-entrypoint.sh  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/: config.js
web/src/: App.tsx  index.tsx
web/src/components/: AuthRoutes.tsx  ChatInterface.css  ChatInterface.tsx  ChatInterface.types.ts  InputArea.tsx  Login.css  Login.tsx  MemorySelection.css  MemorySelection.tsx  MessageItem.tsx  MessageList.tsx  ModelInterface.css  ModelInterface.tsx  PrivateRoute.tsx  RAGInterface.css  RAGInterface.tsx  UserProfilePopup.tsx
web/src/config/: config.ts
web/src/contexts/: AuthContext.tsx
web/src/hooks/: ChatAPI.ts  MemoryAPI.ts  ModelAPI.ts  RAGAPI.ts  ToolAPI.ts  UserAPI.ts
web/src/services/: chatService.ts  memoryService.ts  modelService.ts  ragService.ts  toolService.ts  uploadService.ts  userService.ts
web/src/types/: global.d.ts
web/src/utils/: apiUtils.ts  authUtils.ts
(+24 files in other folders)
