[project]
name = "Peng-Agent"
version = "2.4.1"
description = "A LLM ongoing chat agent for learning"
authors = [
    { name = "Noah Ding", email = "noah@dingyipeng.com" },
    { name = "Tena Walcott", email = "tw@tenawalcott.com" }
]
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.84.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.61",
    "brotli>=1.2.0",
    "bs4>=0.0.2",
    "cryptography>=46.0.5",
    "ddtrace>=4.5.0",
    "email-to>=0.1.0",
    "fastapi>=0.135.1",
    "filelock>=3.25.0",
    "google-genai>=1.66.0",
    "importlib>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langchain[openai]>=1.2.10",
    "langgraph>=1.0.10",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "mysql-connector-python>=9.6.0",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "openinference-instrumentation-langchain>=0.1.61",
    "openpyxl>=3.1.5",
    "openrouter>=0.7.11",
    "orjson>=3.11.7",
    "pandas>=3.0.1",
    "paramiko>=4.0.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.2",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "pymupdf>=1.27.1",
    "pymysql>=1.1.2",
    "pynacl>=1.6.2",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "tavily-python>=0.7.22",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
    "wikipedia>=1.4.0",
    "xai-sdk>=1.8.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "models", "handlers", "services"]

[tool.ruff]
extend-exclude = ["archive/**", "test/**"]
