[project]
name = "Peng-Agent"
version = "2.4.4"
description = "A LLM ongoing chat agent for learning"
authors = [
    { name = "Noah Ding", email = "noah@dingyipeng.com" },
    { name = "Tena Walcott", email = "tw@tenawalcott.com" }
]
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.89.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.83",
    "brotli>=1.2.0",
    "bs4>=0.0.2",
    "cryptography>=46.0.6",
    "ddtrace>=4.6.5",
    "email-to>=0.1.0",
    "fastapi>=0.135.3",
    "filelock>=3.25.2",
    "google-genai>=1.70.0",
    "importlib>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langchain[openai]>=1.2.10",
    "langgraph>=1.1.6",
    "lxml>=6.0.2",
    "mcp>=1.27.0",
    "mysql-connector-python>=9.6.0",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "openinference-instrumentation-langchain>=0.1.62",
    "openpyxl>=3.1.5",
    "openrouter>=0.8.1",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "paramiko>=4.0.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "protobuf>=6.33.6",
    "pyasn1>=0.6.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "pymysql>=1.1.2",
    "pynacl>=1.6.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.23",
    "urllib3>=2.6.3",
    "uvicorn>=0.43.0",
    "wikipedia>=1.4.0",
    "xai-sdk>=1.11.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "models", "handlers", "services"]

[tool.ruff]
extend-exclude = ["archive/**", "test/**"]
